Add API documentation with mkdocstrings and deploy to GitHub Pages
- Enhanced core.md with mkdocstrings directives for automatic docstring extraction
- Created stack-evaluator.md with comprehensive stack evaluator documentation
- Created compiler.md documenting S-expression to JPN compilation
- Preserved valuable content from original docs while adding docstring extraction
- Successfully deployed documentation to https://queelius.github.io/jsl/
- Documentation now includes both hand-written explanations and auto-generated API refs

--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -28,6 +28,9 @@ nav:
     - Objects: language/objects.md
     - Templates: language/templates.md
     - Prelude: language/prelude.md
+    - Query Operations: language/query-operations.md
+    - Transform Operations: language/transform-operations.md
+    - Path Navigation: language/path-navigation.md
   - Tutorials:
     - First Program: tutorials/first-program.md
     - Functions: tutorials/functions.md
@@ -49,12 +52,22 @@ nav:
     - Simple: examples/simple.md
     - Practical: examples/practical.md
     - Advanced: examples/advanced.md
+    - Query & Transform: examples/query-transform.md
+    - Group By: examples/group-by.md
   - API Reference:
     - Core: api/core.md
     - Evaluator: api/evaluator.md
-    - Serialization: api/serialization.md
     - Runner: api/runner.md
+    - Serialization: api/serialization.md
     - Fluent API: api/fluent.md
+    - Stack Evaluator: api/stack-evaluator.md
+    - Compiler: api/compiler.md
+  - Integrations:
+    - Overview: integrations/overview.md
+    - FastAPI: integrations/fastapi.md
+    - MCP: integrations/mcp.md
+    - Jupyter: integrations/jupyter.md
+  - Changelog: changelog.md
 
 plugins:
   - search
